--- a/_config.yml
+++ b/_config.yml
@@ -8,12 +8,12 @@ pygments: true
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : Jekyll Bootstrap
+title : Jasper Chiu's Techblog
 tagline: Site Tagline
 author :
-  name : Name Lastname
-  email : blah@email.test
-  github : username
+  name : Jasper Chiu
+  email : Jasper.Chiu.china@gmail.com
+  github : chunchill
   twitter : username
   feedburner : feedname
 
@@ -25,7 +25,7 @@ author :
 # Else if you are pushing to username.github.io, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : http://username.github.io
+production_url : http://chunchill.github.io
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
